[package]
name = "Fastatsplit"
version = "0.1.0"
edition = "2021"
authors = ["Valentin Berrios v.berriosfarias@gmail.com"]
description = "A very modest program written in rust made to store wanted and unwanted FASTA sequences to different FASTA files. Born from the necesity to have a FASTA filtering tool faster than seqkit"
license = "MIT"
[dependencies]
bio = "2.0.3"
clap = {version= "4.5.30", features = ["derive"]}
